<resources>
    <string name="app_name">Running App</string>
    <string name="google_maps_key">AIzaSyC6mMcZEl90Q5mFjKqpsk6lev1DaUmq4aY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="welcome_nplease_enter_your_name_and_weight">Welcome!\nPlease enter your name and weight.</string>
    <string name="your_name">Your Name</string>
    <string name="your_weight">Your Weight</string>
    <string name="kg">kg</string>
    <string name="continue_">Continue</string>
</resources>