<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SetupFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_nplease_enter_your_name_and_weight"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tilName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="133dp"
        tools:layout_conversion_absoluteWidth="403dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="61dp"
        tools:layout_conversion_absoluteWidth="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="56dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="5dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tilName"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        tools:layout_conversion_absoluteHeight="61dp"
        tools:layout_conversion_absoluteWidth="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_weight"
            android:inputType="numberDecimal"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="56dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="21dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kg"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tilWeight"
        app:layout_constraintStart_toEndOf="@+id/tilWeight"
        app:layout_constraintTop_toTopOf="@+id/tilWeight"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="26dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:drawableEnd="@drawable/round_arrow_forward_ios_24"
        android:text="@string/continue_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>